style.css
:root {
  --nutmeg: hsl(14, 45%, 36%);
  --dark-raspberry: hsl(332, 51%, 32%);
  --white: hsl(0, 0%, 100%);
  --rose-white: hsl(330, 100%, 98%);
  --eggshell: hsl(30, 54%, 90%);
  --light-grey: hsl(30, 18%, 87%);
  --wenge-brown: hsl(30, 10%, 34%);
  --dark-charcoal: hsl(24, 5%, 18%);
}

@font-face {
  font-family: "Young Serif";
  src: url("./assets/fonts/young-serif/YoungSerif-Regular.ttf")
    format("truetype");
  font-weight: normal;
}

@font-face {
  font-family: "Outfit";
  src: url("./assets/fonts/outfit/Outfit-VariableFont_wght.ttf")
    format("truetype");
  font-weight: normal, 600, 700;
}

.attribution {
	font-size: 0.75rem;
	text-align: center;
	margin-bottom: 30px;
}

.attribution a {
	color: var(--dark-raspberry);
	text-decoration: none;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  font-family: "Outfit", sans-serif;
  font-weight: 400;
}

h1,
h2 {
  font-family: "Young Serif", sans-serif;
}

h1 {
  font-size: 2.5rem;
  font-weight: normal;
}

h2 {
  font-size: 1.75rem;
}

h3,
h4 {
  font-weight: bold;
}

h2,
h3,
h4 {
  color: var(--dark-raspberry);
}

p,
li,
th,
td,
h4 {
  color: var(--wenge-brown);
}

td {
  color: var(--dark-raspberry);
  font-weight: bold;
}

body {
  background-color: var(--eggshell);
}

img {
  width: 100%;
  padding: 30px;
  border-radius: 60px;
}

main {
  width: 100%;
  max-width: 770px;
  margin: 100px auto;
  display: flex;
  flex-direction: column;
  background-color: var(--white);
  border-radius: 24px;
}

.container {
  padding: 50px;
  padding-top: 0;
}

.title p {
  font-size: 1rem;
  padding-top: 30px;
}

.time {
  background-color: var(--rose-white);
  padding: 30px;
  border-radius: 12px;
  margin: 30px 0 30px 0;
}

.time h3 {
  padding-bottom: 20px;
}
.total,
.prep,
.cook {
  position: relative;
  padding: 12px 0 0 20px;
  display: flex;
}

.total h4,
.prep h4,
.cook h4 {
  padding-right: 4px;
}

.total::before,
.prep::before,
.cook::before {
  content: "•"; /* Bullet character */
  position: absolute;
  left: 0;
  font-size: 20px; /* Bullet size */
  line-height: 1; /* Vertical alignment */
  color: var(--dark-raspberry); /* Bullet color */
}

.ingredients ul {
  list-style: none; /* Remove default bullets */
  padding-left: 10px;
  margin-top: 20px;
}

.ingredients li::before {
  content: "•"; /* Custom bullet character */
  color: var(--dark-raspberry); /* Bullet color */
  display: inline-block;
  width: 2em; /* Space for the bullet */
  font-size: 1.25rem;
}

.ingredients li {
  padding: 4px 0;
}

.divider {
  margin: 30px 0;
  border: none; /* Remove the default border */
  height: 0.1rem; /* Thickness of the line */
  background-color: var(--nutmeg); /* Color of the line */
  opacity: 0.1; /* Opacity of the line */
}

ol {
  counter-reset: section; /* Initialize a counter */
  list-style-type: none; /* Remove default numbering */
  padding-left: 10px;
  margin-top: 20px;
}

ol li {
  counter-increment: section; /* Increment the counter */
  position: relative;
  padding: 0 0 12px 40px; /* Space for the custom number */
}

ol li::before {
  content: counter(section) "."; /* Display the counter as the number */
  position: absolute;
  left: 0;
  color: var(--dark-raspberry); /* Number color */
  font-size: 1em;
  font-weight: bold;
}

.instruction-item {
  font-weight: bold;
}

.nutrition p {
  padding-top: 20px;
}

table {
  border-collapse: collapse;
  width: 100%;
  margin-top: 20px;
}

tr {
  border-bottom: 0.1rem solid rgba(133, 70, 50, 0.1);
}

th, td {
  text-align: left;
  padding: 12px;
}

/* Mobile Responsiveness */
@media (max-width: 426px) {

	.container {
		padding: 25px;
	}

	.total,
	.prep,
	.cook {
		font-size: 0.8rem;
	}
}

@media (max-width: 769px) {

	body {
		background-color: var(--white);
	  }

	main {
		margin: 0;
		border-radius: 0;
	}

	img {
		padding: 0;
		border-radius: 0;
		margin-bottom: 30px;
	}
}

